--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,48 @@
-[build-system]
-requires = [ "poetry>=0.12",]
-build-backend = "poetry.masonry.api"
+[project]
+name = "ChessVit"
+version = "0.1.0"
+description = ""
+authors = [
+    {name = "Manuel Ordoñez",email = "manuelordzslv@gmail.com"}
+]
+readme = "README.md"
+requires-python = ">=3.10,<3.12"
+
 
 [tool.poetry]
-name = "chesscog"
-version = "1.0.1"
-description = "Recognise chess positions using computer vision."
-authors = [ "Georg Wölflein <georgw7777@gmail.com>",]
-include = [ "config/*.yaml", "config/**/_*.yaml",]
-[[tool.poetry.packages]]
-include = "chesscog"
+packages = [{include = "test_demo", from = "src"}]
 
-[tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+test = [
+    "pytest (>=6.0.0,<7.0.0)",
+    "pytest-mock",
+]
+
+[tool.poetry.group.main.dependencies]
 sphinx = { version = "^4.1.2", optional = true }
 sphinx-rtd-theme = { version = "^0.5.2", optional = true }
 m2r2 = { version = "^0.3.1", optional = true }
-opencv-python = "^4.5.3"
-numpy = "^1.21.2"
-Pillow = "^8.3.1"
-matplotlib = "^3.4.3"
-torch = "^1.9.1"
-torchvision = "^0.10.0"
-tensorboard = "^2.6.0"
-pandas = "^1.3.2"
-scikit-learn = "^0.24.2"
-tqdm = "^4.62.2"
+opencv-python = "^4.12.0"
+numpy = "^2.2.0"
+Pillow = "^11.3.0"
+matplotlib = "^3.9.0"
+torch = "^2.8"
+torchvision = "^0.23"
+tensorboard = "^2.20.0"
+pandas = "^2.3.2"
+scikit-learn = "^1.6.0"
+tqdm = "^4.67.1"
 googledrivedownloader = "^0.4"
 recap = "^0.1.6"
 chess = "^1.6.1"
 osfclient = "^0.0.5"
-setuptools = "59.5.0"
+setuptools = "80.9.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 jupyterlab = "^2.2.8"
 autopep8 = "^1.5.4"
 pylint = "^2.6.0"
@@ -40,5 +50,5 @@ pytest = "^6.1.1"
 toml = "^0.10.2"
 pdoc3 = "^0.9.2"
 
-[tool.poetry.extras]
-docs = ["sphinx", "sphinx-rtd-theme", "m2r2"]
+# [tool.poetry.group.extra.dependencies]
+# docs = ["sphinx", "sphinx-rtd-theme", "m2r2"]
