--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.10,<3.12"
 
 
 [tool.poetry]
-packages = [{include = "test_demo", from = "src"}]
+packages = [{include = "chesscog"}]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
