feat(config): add configurations for Vision Transformer base and large models

--- a/config/occupancy_classifier/VITB16.yaml
+++ b/config/occupancy_classifier/VITB16.yaml
@@ -6,6 +6,6 @@ DATASET:
     - 224
 TRAINING:
   MODEL:
-    NAME: vit_b_16
+    NAME: VITB16
     REGISTRY: OCCUPANCY_CLASSIFIER
 _BASE_: config://occupancy_classifier/_base_pretrained.yaml
