--- a/config/piece_classifier/VITB16.yaml
+++ b/config/piece_classifier/VITB16.yaml
@@ -6,6 +6,6 @@ DATASET:
     - 224
 TRAINING:
   MODEL:
-    NAME: vit_b_16
+    NAME: VITB16
     REGISTRY: PIECE_CLASSIFIER
 _BASE_: config://piece_classifier/_base_pretrained.yaml
