--- a/config/occupancy_classifier/_base_pretrained.yaml
+++ b/config/occupancy_classifier/_base_pretrained.yaml
@@ -5,10 +5,10 @@ TRAINING:
     - EPOCHS: 1
       OPTIMIZER:
         LEARNING_RATE: 0.001
-        NAME: Adam
+        NAME: AdamW
       PARAMS: head
     - EPOCHS: 2
       OPTIMIZER:
         LEARNING_RATE: 0.0001
-        NAME: Adam
+        NAME: AdamW
       PARAMS: all
