--- a/config/occupancy_classifier/SwinTV2.yaml
+++ b/config/occupancy_classifier/SwinTV2.yaml
@@ -6,6 +6,6 @@ DATASET:
     - 224
 TRAINING:
   MODEL:
-    NAME: VITL16
+    NAME: SwinTV2
     REGISTRY: OCCUPANCY_CLASSIFIER
 _BASE_: config://occupancy_classifier/_base_pretrained.yaml
