--- a/config/piece_segmenter/_base.yaml
+++ b/config/piece_segmenter/_base.yaml
@@ -3,18 +3,8 @@ _BASE_: config://_classifier_base.yaml
 DATASET:
   PATH: data://
   CLASSES:
-    - black_bishop
-    - black_king
-    - black_knight
-    - black_pawn
-    - black_queen
-    - black_rook
-    - white_bishop
-    - white_king
-    - white_knight
-    - white_pawn
-    - white_queen
-    - white_rook
+    - background
+    - piece
   BATCH_SIZE: 16
   TRANSFORMS:
     CENTER_CROP: null
