--- a/config/piece_classifier/MaxVit.yaml
+++ b/config/piece_classifier/MaxVit.yaml
@@ -6,6 +6,6 @@ DATASET:
     - 224
 TRAINING:
   MODEL:
-    NAME: SwinBV2
+    NAME: MaxVit
     REGISTRY: PIECE_CLASSIFIER
 _BASE_: config://piece_classifier/_base_pretrained.yaml
